--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -159,6 +159,15 @@ tasks.register('dist') {
   dependsOn 'jar'
 }
 
+jar {
+  from {
+    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+  }
+  from {
+    fileTree(dir: 'assets', include: '**/*')
+  }
+}
+
 distributions {
   main {
     contents {
